--- a/djangoProject/docker-compose.yml
+++ b/djangoProject/docker-compose.yml
@@ -3,11 +3,10 @@ version:  '3'
 services:
   database:
     image: mysql
-    container_name: cwh920625
+    container_name: mydb
     volumes:
-      - ~/docker/mysql/etc/mysql/conf.d:/etc/mysql/cong.d:ro
-      - ~/docker/mysql/var/lib/mysql:/var/lib/musql
-      - ~/docker/mysql/var/log/mysql:/var/log/mysql
+      - /opt/mydb/mysql_data:/var/lib/mysql
+      - /tmp/mydb/mysqld:/var/run/mysqld
     environment:
       - MYSQL_DATABASE=mydb
       - MYSQL_ROOT_PASSWORD=root
@@ -16,17 +15,20 @@ services:
     ports:
       - 3306:3306
 
-  web:
+  backend:
     image: cwh920625dj:v1
     build: .
     container_name: cwh920625dj
-    command:
-      -python manage.py runserver 0:8000
+    stdin_open: true
+    tty: true
+    command: python manage.py runserver 0:8000
     ports:
-      - "8000:8000"
+      - 8000:8000
     volumes:
       - .:/cwh920625dj
+      - /tmp/mydb/mysqld:/run/mysqld
     expose:
       - "8000"
-
-
+    restart: always
+    depends_on:
+      - database
