--- a/reactProject/package.json
+++ b/reactProject/package.json
@@ -19,9 +19,10 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.4",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
+    "required": "^1.0.0",
     "styled-components": "^5.3.6",
     "three": "^0.147.0",
     "web-vitals": "^2.1.0"
